--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Taza gold
 
         <!-- Move the "Request for free demo" button to the right on larger screens -->
         <div class="ms-lg-auto">
-          <a href="form.html" class="btn btn-sm" id="button-nav" style="background-color: rgb(3, 120, 3);">Live rate</a>
+          <a href="form.html" class="btn btn-sm" id="button-nav" style="background-color: rgb(3, 120, 3);color: aliceblue;">Live rate</a>
         </div>
       </nav>
     </div>
