--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@ Taza gold
             <li class="nav-item">
               <a class="nav-link" href="#services">Our services</a>
             </li>
-           <!-- <li class="nav-item">
+           <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
-            </li>-->
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#footer">Contact Us</a>
             </li>
