--- a/index.html
+++ b/index.html
@@ -77,22 +77,33 @@ Taza gold
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <span class="px-5"></span>
-            <span class="px-5"></span>
-            <span class="px-5"></span>
-            <span class="px-5"></span>
-            <span class="px-5"></span>
-            <span class="px-5"></span>
-            <img src="./assets/img/taza2.png" style="height: 40px;" alt="">
-
+                        <!-- <img src="./assets/img/taza2.png" style="height: 40px;" alt=""> -->
             <li class="nav-item">
+               <img src="./assets/img/taza2.png" style="height: 40px;" alt="">
+            </li>
+            <li class="nav-item" style="margin-left: 300px;">
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#services">Our services</a>
+              <a class="nav-link" href="#services">Products</a>
             </li>
            <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Live rate</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Aml  policy</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                My Account
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Account Opening fourum</a></li>
+                <li><a class="dropdown-item" href="#">Account Funding</a></li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#footer">Contact Us</a>
