--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ Taza gold
     </div>
     <!-- Card 5 -->
     <div class="col mb-4">
-      <div class="info-horizontal bg-gradient-primary border-radius-xl d-block d-md-flex p-4">
+      <div class="info-horizontal bg-gradient-primary border-radius-xl d-block d-md-flex p-4" style="background-color: darkgreen;">
         <div class="ps-0 ps-md-3 mt-3 mt-md-0">
           <img src="./assets/img/taza..png" alt="" style="height: 200px;">
         </div>
@@ -598,7 +598,7 @@ while establishing a brokerage firm?</h3>
         </div>
 
       </div>
-      <div class="justify-content-center d-flex mt-3 mb-5">      <a href="https://www.tecnavis.com/" class="btn btn-primary btn-lg mb-3 mb-sm-0 mx-auto">know plans</a>
+      <div class="justify-content-center d-flex mt-3 mb-5">      <a href="https://www.tecnavis.com/" class="btn  btn-lg mb-3 mb-sm-0 mx-auto" style="background-color: darkgreen;color: aliceblue;">know plans</a>
       </div>
 
     </div>
