--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ Taza gold
       </div>
       <div class="col-md-5 col-12 my-auto">
         <a href="https://www.creative-tim.com/product/material-kit-pro?ref=index-mk2">
-          <img class="w-100 border-radius-lg shadow-lg" src="./assets/img/profile (3).jpeg" alt="Product Image">
+          <img class="w-100 border-radius-lg shadow-lg" src="./assets/img/high-angle-aesthetic-wallpaper-with-gold-bars.jpg" alt="Product Image">
         </a>
       </div>
     </div>
