--- a/index.html
+++ b/index.html
@@ -225,17 +225,17 @@ Taza gold
     <div class="row">
       <div class="col-md-7 col-12 my-auto">
         <h3 style="color: darkgreen;">Our Bullion</h3>
-        <h3>apps and more</h3>
+        <h3>Golden Investments, Lasting Returns</h3>
         <p class="pe-md-5 mb-4">
-          "Time never waits, but the beauty is that you must keep pace with it. 
-          The Moneyscop mobile app solution offers an internationally standardized 
-          experience in live bullion trading. With our straightforward and elegant 
-          user interface and user experience, you can effortlessly grasp and immerse
-           yourself in the live bullion trading rates. Our solution provides users 
-           with access to client-listed commodities, real-time commodity rates, news
-            and updates in the bullion trading world, and an international clock. This 
-            comprehensive solution simplifies understanding and practically markets itself.
-             Take a tour of our top-tier industry solution today."        </p>
+          At Taza Gold Bullion, we understand the importance of trust and transparency in the precious metals market. Our website is designed to provide detailed information about each product, including its weight, purity, and origin. We also offer real-time pricing updates, ensuring that our customers always have access to the most current market rates. Our user-friendly interface makes it easy to navigate through our diverse product offerings, compare prices, and make informed purchasing decisions.
+
+In addition to our wide selection of gold bullion, Taza Gold Bullion offers a variety of resources to help our customers make the most of their investments. Our blog features expert insights on market trends, investment strategies, and the benefits of including gold in your portfolio. We also provide educational guides that cover the basics of gold investing, from understanding different types of bullion to tips on storage and security. At Taza Gold Bullion, our goal is to empower our customers with the knowledge and tools they need to achieve their financial goals.
+
+
+
+
+
+        </p>
         <div class="github-buttons">
           <div class="github-button">
                  <div class="d-flex mt-4">
@@ -279,50 +279,68 @@ Taza gold
 <div class="container">
   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
     <!-- Card 1 -->
-    <div class="col mb-4">
+    <div class="col mb-4" style="width: 300px; height: 300px;">
       <div class="info-horizontal bg-gradient-primary border-radius-xl d-block d-md-flex p-4">
         <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-          <img src="./assets/img/taza..png" alt="" style="height: 200px;">
+          <img src="./assets/goldbar/gold3.png" alt="" style="height: 200px;">
         </div>
       </div>
     </div>
     <!-- Card 2 -->
-    <div class="col mb-4">
+    <div class="col mb-4" style="width: 300px; height: 250px;">
       <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4 h-100">
         <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-          <img src="./assets/img/taza..png" alt="" style="height: 200px;">
+          <img src="./assets/goldbar/gold1.png" alt="" style="height: 200px;">
         </div>
       </div>
     </div>
     <!-- Card 3 -->
-    <div class="col mb-4">
+    <div class="col mb-4"style="width: 300px; height: 300px;">
       <div class="info-horizontal bg-gradient-primary border-radius-xl d-block d-md-flex p-4">
         <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-          <img src="./assets/img/taza..png" alt="" style="height: 200px;">
+          <img src="./assets/goldbar/gold5.png" alt="" style="height: 200px;">
         </div>
       </div>
     </div>
     <!-- Card 4 -->
-    <div class="col mb-4">
+    <div class="col mb-4" style="width: 300px; height: 300px;">
       <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4">
         <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-          <img src="./assets/img/taza..png" alt="" style="height: 200px;">
+          <img src="./assets/goldbar/gold100.png" alt="" style="height: 200px;">
         </div>
       </div>
     </div>
     <!-- Card 5 -->
-    <div class="col mb-4">
+    <div class="col mb-4"style="width: 300px; height: 300px;">
       <div class="info-horizontal bg-gradient-primary border-radius-xl d-block d-md-flex p-4" style="background-color: darkgreen;">
         <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-          <img src="./assets/img/taza..png" alt="" style="height: 200px;">
+          <img src="./assets/goldbar/gold7.png" alt="" style="height: 200px;">
         </div>
       </div>
     </div>
     <!-- Card 6 -->
-    <div class="col mb-4">
+    <div class="col mb-4"style="width: 300px; height: 300px;">
       <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4">
         <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-          <img src="./assets/img/taza..png" alt="" style="height: 200px;">
+          <img src="./assets/goldbar/gold9.png" alt="" style="height: 200px;">
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col mb-4"style="width: 300px; height: 300px;">
+      <div class="info-horizontal bg-gradient-primary border-radius-xl d-block d-md-flex p-4" style="background-color: darkgreen;">
+        <div class="ps-0 ps-md-3 mt-3 mt-md-0">
+          <img src="./assets/goldbar/gold7.png" alt="" style="height: 200px;">
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col mb-4"style="width: 300px; height: 300px;">
+      <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4">
+        <div class="ps-0 ps-md-3 mt-3 mt-md-0">
+          <img src="./assets/goldbar/gold9.png" alt="" style="height: 200px;">
         </div>
       </div>
     </div>
