--- a/index.html
+++ b/index.html
@@ -540,8 +540,7 @@ In addition to our wide selection of gold bullion, Taza Gold Bullion offers a va
 &nbsp;<br>
 
 <div class="justify-content-center d-flex text-center">
-<h3 class="text-white mb-0 d-block text-center p-3">When should you design your own website <br>
-while establishing a brokerage firm?</h3>
+<h3 class="text-white mb-0 d-block text-center p-3">Our Services <br></h3>
 </div>
     <!-- Card Row -->
     <div class="container-fluid mt-5">
@@ -549,12 +548,11 @@ while establishing a brokerage firm?</h3>
         <!-- Card 1 -->
         <div class="col-md-3 glassmorphism">
           <div class="">
-            <h5 class="card-title">Social Media Ads</h5><br>
-            <p class="card-text">
-              Targeted Audience Engagement: <br>
-           Increased Brand Visibility and Awareness: <br>
-           Data-Driven Insights and Analytics:
+            <h5 class="card-title">Bullion Sales
 
+            </h5><br>
+            <p class="card-text">
+              High-quality gold, <br>silver, platinum, and palladium bars and coins.
 
             </p>
                   </div>
@@ -565,12 +563,11 @@ while establishing a brokerage firm?</h3>
         <!-- Card 3 -->
         <div class="col-md-3 glassmorphism">
           <div class="">
-            <h5 class="card-title">Social Media Marketing</h5>
+            <h5 class="card-title">Precious Metals Investment Advice
+
+            </h5>
             <p class="card-text">
-              <br> Building Authentic Relationships:
-<br>
- Content Virality and Brand Amplification:
-<br>Data-Driven Strategy and Targeted Advertising:
+              <br> Expert advice on investing, portfolio diversification, and market trends.
 
             </p>
         
@@ -580,11 +577,8 @@ while establishing a brokerage firm?</h3>
         <!-- Card 2 -->
         <div class="col-md-3 glassmorphism">
           <div class="">
-            <h5 class="card-title">SEO Services</h5>
-            <p class="card-text"><br> Strategic Keyword Optimization:
-              <br> Technical SEO and Website Optimization:
-              <br> Quality Content Creation and Link Building:
-            </p>
+            <h5 class="card-title">Bullion Storage Solutions</h5>
+            <p class="card-text"><br> Secure vaults and safes for safe, insured bullion storage.
                     </div>
         </div>
 </div>
@@ -592,11 +586,9 @@ while establishing a brokerage firm?</h3>
         <!-- Card 4 -->
         <div class="col-md-3 glassmorphism">
           <div class="">
-            <h5 class="card-title">Website Design</h5><br>
-            <p class="card-text"> Responsive and User-Centric Design:<br>
-              Visual Appeal and Brand Identity:<br>
-              Optimized Performance and Speed:
-            </p>
+            <h5 class="card-title">Buyback Services</h5><br>
+            <p class="card-text"> Sell bullion easily with competitive rates and fast transactions.
+              
                     </div>
         </div>
         <!-- Card 5 -->
