--- a/service.html
+++ b/service.html
@@ -199,19 +199,15 @@ Taza gold
         <!-- Card 5 -->
         <div class="col-md-3 glassmorphism">
           <div class="">
-            <h5 class="card-title">E-commerce</h5><br>
-            <p class="card-text">User-Friendly Online Store:<br>
-              Secure Payment Gateway and Data Protection: <br>
-               Mobile Optimization and Responsiveness:
+            <h5 class="card-title">Live Chat and Customer Support</h5><br>
+            <p class="card-text">Provide live chat support to assist users with their inquiries and transactions
             </p>
         </div> </div>
 
         <div class="col-md-3 glassmorphism">
           <div class="">
-            <h5 class="card-title">E-commerce</h5><br>
-            <p class="card-text">User-Friendly Online Store:<br>
-              Secure Payment Gateway and Data Protection: <br>
-               Mobile Optimization and Responsiveness:
+            <h5 class="card-title">Gold Storage Solutions</h5><br>
+            <p class="card-text">Offer information and options for secure storage of physical gold bullion.
             </p>
         </div> </div>
 
