--- a/form.html
+++ b/form.html
@@ -165,7 +165,7 @@ Taza gold
                 <textarea class="form-control" id="message" name="message" rows="4"  style="border:2px solid rgb(218, 208, 208);" required></textarea>
             </div>
             
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-" style="background-color: darkgreen;color: aliceblue;" >Submit</button>
         </form>
 
         <div id="errorMessages" class="text-danger mt-3"></div>
