--- a/index.html
+++ b/index.html
@@ -299,7 +299,9 @@ In addition to our wide selection of gold bullion, Taza Gold Bullion offers a va
       </div>
     </div>
   </div>
+
 </section>
+
 <div class="container">
   <div class="text-center mt-5">
     <h2> Our Products</h2>
@@ -379,7 +381,34 @@ In addition to our wide selection of gold bullion, Taza Gold Bullion offers a va
 </div>
 </section>
 
+<style>
+@media (max-width: 767.98px) {
+  .row-cols-1 > .col {
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding: 0.5rem;
+  }
 
+  .info-horizontal {
+    height: 200px; /* Decreased height for the cards */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .info-horizontal img {
+    max-height: 80%; /* Adjusts image size to fit within the new card height */
+    max-width: 100%;
+    object-fit: contain;
+  }
+}
+
+
+
+</style>
 
 
 <section class="py-sm-7" id="download-soft-ui">
